--- a/public/css/welcomePageCss.css
+++ b/public/css/welcomePageCss.css
@@ -10,7 +10,10 @@
 }
 
 body{
+    /* padding-bottom: 100px; */
     height: 100vh;
+    /* min-height: max-content; */
+    background-repeat: no-repeat;
     background-image: linear-gradient(to right top, #590f32, #491029, #391021, #2a0f19, #1d0a11, #250f16, #2e121a, #38151d, #5f1c28, #88222f, #b12c30, #d93a2b) !important;
 }
 
@@ -103,3 +106,68 @@ body{
     padding-right: 30px;
     letter-spacing: 1px;
 }
+
+
+.register-card-logo{
+    width: 60px;
+    height: 60px;
+}
+
+
+
+
+.register_card{
+    background: linear-gradient(135deg, rgba(255, 255, 255, 0.199), rgba(255, 255, 255, 0.171));
+    backdrop-filter: blur(4px);
+    -webkit-backdrop-filter: blur(15px);
+}
+
+
+
+.register_btn{
+    color: rgb(226, 226, 226);
+    font-size: 15px;
+    font-weight: 700;
+    letter-spacing: 1px;
+    border: none;
+    padding-top: 10px;
+    padding-left: 50px;
+    border-radius: 50px;
+    padding-right: 50px;
+    padding-bottom: 10px;
+    background-image: linear-gradient(to right, #d97c2b, #da7129, #da6528, #da5929, #da4b2b);
+}
+
+
+
+
+.form-control::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
+            color: rgba(196, 196, 196, 0.897) !important;
+            opacity: 1; /* Firefox */
+}
+
+.form-control:-ms-input-placeholder { /* Internet Explorer 10-11 */
+    color: rgba(196, 196, 196, 0.897) !important;
+}
+
+.form-control::-ms-input-placeholder { /* Microsoft Edge */
+    color: rgba(196, 196, 196, 0.897) !important;
+ }
+
+
+ .detail-card-img{
+    width: 180px;
+    height: 180px;
+ }
+
+
+ .user-detail-card{
+    background: linear-gradient(135deg, rgba(255, 255, 255, 0.199), rgba(255, 255, 255, 0.171));
+    backdrop-filter: blur(5px);
+    -webkit-backdrop-filter: blur(15px);
+ }
+
+ .user-credentials{
+    color: #1d0a11;
+    font-weight: 700;
+ }
